--- a/2026_1_estadistica/notebooks/1C.ipynb
+++ b/2026_1_estadistica/notebooks/1C.ipynb
@@ -3,21 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c2c86a2",
-   "metadata": {},
+   "id": "60f40f16",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_wsl",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R (MCDI-WSL)",
+   "language": "R",
+   "name": "ir_wsl"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.12.3"
+   "name": "R"
   }
  },
  "nbformat": 4,
