--- a/2026_1_analisis_algoritmos/reportes/2B.tex
+++ b/2026_1_analisis_algoritmos/reportes/2B.tex
@@ -153,11 +153,12 @@ Discusión: Se puede apreciar que la distribución está fuertemente sesgada a l
 \newpage
 \section{Conclusiones}
 
-De esta práctica nos quedan dos cosas claras. Primero, la gráfica demuestra que al buscar entre un millón de vectores en solo 16 dimensiones, casi siempre encontraremos un vecino muy similar (formando una campana centrada en ≈0.89). Segundo, la eficiencia de un algoritmo depende totalmente de cómo gestiona la memoria. El algoritmo A2 superó a A1 porque calcula todo al vuelo aprovechando la memoria caché, mientras que A1 se asfixia intentando guardar una matriz gigantesca e innecesaria en la RAM.
+De esta práctica nos quedan dos cosas claras. Primero, la gráfica demuestra que al buscar entre un millón de vectores en solo 16 dimensiones, casi siempre encontraremos un vecino muy similar (formando una campana centrada en $\approx 0.89$). Segundo, la eficiencia de un algoritmo depende totalmente de cómo gestiona la memoria. El algoritmo A2 superó a A1 porque calcula todo al vuelo aprovechando la memoria caché, mientras que A1 se asfixia intentando guardar una matriz gigantesca e innecesaria en la RAM.
 \section{Referencias}
 
 \begin{itemize}
     \item Unidad 3: Notas del curso (Introducción a propiedades y operaciones básicas de estructuras y matrices en Julia).
+    \item Gómez Fuentes, M. C., \& Cervantes Ojeda, J. (2014). Análisis de la complejidad algorítmica. En \textit{Introducción al Análisis y al Diseño de Algoritmos}. Universidad Autónoma Metropolitana.
 \end{itemize}
 
 \end{document}
